# OpenCVMainWindowCMakeTemplate

./: CMakeLists.txt  VideoCaptureThread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  videocapturethread.cpp
